[tool.poetry]
name = "vcon-sample-link"
version = "0.1.0"
description = "A sample vcon link that adds custom attachments to vcon objects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vcon_sample_link"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 